@@ -13,6 +13,9 @@ Incompatibilities:
 
 Improvements:
 
+ - Command line arguments are split into diff, revision, and file
+   arguments and made available as %(diff-args), %(rev-args), and
+   %(file-args). Diff view will limit diffs using %(file-args).
  - Status view: update the file variable when a line is selected so
    %(file) works as expected.
  - Branch view: add %(branch) symbol providing access to the selected
